# pki

./: .classpath  .dockerignore  .gitignore  .gitlab-ci.yml  .packit.yaml  .project  .pydevproject  .test_runner_config.yaml  .travis.test  .travis.yml  .travis_run_ipa_task.sh  .travis_run_task.sh  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  ConfigureChecks.cmake  Containerfile.quarkus  DASHBOARD-IMPLEMENTATION.docx  DASHBOARD-IMPLEMENTATION.md  DOGTAG-PKI-SYSTEM-GUIDE.ipynb  DefineOptions.cmake  Dockerfile  EST-POC-SUMMARY.md  ML-DSA-IMPLEMENTATION.md  ML-KEM-IMPLEMENTATION.md  MODERNIZATION-DB-MIGRATION.md  MODERNIZATION-GUIDE.md  MODERNIZATION-IMPLEMENTATION-PLAN.md  MODERNIZATION-K8S-OPERATOR.md  MODERNIZATION-POC-ACME.md  MODERNIZATION-README.md  MODERNIZATION-RUST-REWRITE.docx  MODERNIZATION-RUST-REWRITE.md  NOTIFICATION-SYSTEM-PLAN.docx  NOTIFICATION-SYSTEM-PLAN.md  README  README.md  README_FOR_TESTS  TOMCAT-TO-QUARKUS-MIGRATION.docx  (+23 more)
base/: CMakeLists.txt  VERSION  pom.xml
base/acme/: CMakeLists.txt  Dockerfile  pom.xml
base/acme-quarkus/: pom.xml
base/acme/conf/: ACME.conf  backend.json  configsources.conf  database.conf  database.json  engine.conf  issuer.conf  issuer.json  metadata.conf  metadata.json  realm.conf  scheduler.conf  validators.conf  validators.json
base/acme/openshift/: pki-acme-certs.yaml  pki-acme-database.yaml  pki-acme-deployment.yaml  pki-acme-is.yaml  pki-acme-issuer.yaml  pki-acme-metadata.yaml  pki-acme-realm.yaml  pki-acme-route.yaml  (+1 more)
base/ca/: CMakeLists.txt  Dockerfile  pom.xml
base/ca-quarkus/: pom.xml
base/common/: CMakeLists.txt  LICENSE.LESSER  THIRD_PARTY_LICENSES  pom.xml
base/console/: CMakeLists.txt  pom.xml
base/deploy/: CMakeLists.txt
base/est/: CMakeLists.txt  pom.xml
base/est-quarkus/: .podman-summary.txt  .welcome.txt  ARM64-README.md  BUILD.md  Containerfile  Containerfile.arm64  MIGRATION-GUIDE.md  PODMAN.md  QEMU-EMULATION-GUIDE.md  QUICK-REFERENCE.md  QUICKSTART.md  README.md  START-HERE.md  podman-build-x86.sh  podman-build.sh  podman-run-x86.sh  podman-run.sh  pom.xml  quarkus-dev.sh
base/java-tools/: CMakeLists.txt  pki
base/javadoc/: CMakeLists.txt
base/kra/: CMakeLists.txt  pom.xml
base/kra-quarkus/: pom.xml
base/meta/: CMakeLists.txt  README
base/migrate/: CMakeLists.txt
base/ocsp/: CMakeLists.txt  pom.xml
base/ocsp-quarkus/: pom.xml
base/quarkus-common/: pom.xml
base/ra/: CMakeLists.txt
base/scripts/: enable_cvs_keywords_in_svn  pkicheck  pkiclihelp  pkimanifest
base/server/: CMakeLists.txt  README  pom.xml
base/server-core/: CMakeLists.txt  pom.xml
base/server-webapp/: CMakeLists.txt  LICENSE  pom.xml
base/setup/: CMakeLists.txt  pki  pki-setup-proxy  pkicommon.pm  pkicreate  pkiremove
base/silent/: CMakeLists.txt
base/symkey/: CMakeLists.txt  LICENSE
base/test/: CMakeLists.txt
base/tks/: CMakeLists.txt  pom.xml
base/tks-quarkus/: pom.xml
base/tomcat/: CMakeLists.txt  pom.xml
base/tomcat-10.1/: .project  CMakeLists.txt  pom.xml
base/tomcat-9.0/: CMakeLists.txt  pom.xml
base/tools/: CMakeLists.txt  build-hsm-compat-verify.sh  build-kratool.sh  hsm-compat-verify-pom.xml  kratool-pom.xml  pki-hsm-compat-verify.spec  pki-kratool.spec  pom.xml
base/tps/: CMakeLists.txt  pom.xml
base/tps-client/: CMakeLists.txt
base/tps-quarkus/: pom.xml
base/tps-tomcat/: CMakeLists.txt  LICENSE
base/util/: CMakeLists.txt  PKICertImport.bash  pom.xml
dogtag/: CMakeLists.txt
dogtag/ca-ui/: CMakeLists.txt
dogtag/common-ui/: CMakeLists.txt  CS_SERVER_VERSION  build_dogtag
dogtag/console-ui/: CMakeLists.txt  build_dogtag
dogtag/kra-ui/: dogtag-pki-kra-ui.spec
dogtag/ocsp-ui/: CMakeLists.txt  build_dogtag  dogtag-pki-ocsp-ui.spec
dogtag/ra-ui/: CMakeLists.txt  build_dogtag
dogtag/tks-ui/: CMakeLists.txt  dogtag-pki-tks-ui.spec
dogtag/tps-ui/: build.xml  dogtag-pki-tps-ui.spec
pki/: .classpath  .project  CMakeLists.txt  CPackConfig.cmake  ConfigureChecks.cmake  README  config.h.cmake
pki/base/: CMakeLists.txt
pki/dogtag/: CMakeLists.txt
pki/patches/: ipa-pki-theme-9.0.3-r1886.patch  ipa-pki-theme-9.0.3-r2161.patch  pki-core-9.0.3-r1846.patch  pki-core-9.0.3-r1860.patch  pki-core-9.0.3-r1862.patch  pki-core-9.0.3-r1864.patch  pki-core-9.0.3-r1875.patch  pki-core-9.0.3-r1879.patch  pki-core-9.0.3-r1886.patch  pki-core-9.0.3-r1908.patch  pki-core-9.0.3-r2074.patch  pki-core-9.0.3-r2097.patch  pki-core-9.0.3-r2103.patch  pki-core-9.0.3-r2104.patch  pki-core-9.0.3-r2106.patch  pki-core-9.0.3-r2112.patch  pki-core-9.0.3-r2118.patch  pki-core-9.0.3-r2125.patch  pki-core-9.0.3-r2126.patch  pki-core-9.0.3-r2128.patch  pki-core-9.0.3-r2149.patch  pki-core-9.0.3-r2151.patch  pki-core-9.0.3-r2153.patch  pki-core-9.0.3-r2161.patch  pki-core-9.0.3-r2163.patch  pki-core-9.0.3-r2182.patch  pki-core-9.0.3-r2249.patch  pki-core-selinux-f17.patch
pki/scripts/: build_dogtag_pki  compose_dogtag_pki_meta_packages  compose_dogtag_pki_theme_packages  compose_functions  compose_ipa_pki_theme_packages  compose_osutil_packages  compose_pki_console_packages  compose_pki_core_packages  compose_pki_kra_packages  compose_pki_migrate_packages  compose_pki_ocsp_packages  compose_pki_ra_packages  compose_pki_tks_packages  compose_pki_tps_packages  create_pki_yum_repos  install_default_ca_instance  prepare_dogtag_pki  prepare_pki  remove_pki_components
pki/specs/: dogtag-pki-theme.spec  dogtag-pki.spec  ipa-pki-theme.spec  osutil.spec  pki-console.spec  pki-core.spec  pki-kra.spec  pki-migrate.spec  pki-ocsp.spec  pki-ra.spec  pki-tks.spec  pki-tps.spec
tests/: CMakeLists.txt  README.adoc  Vagrantfile  pki-rpminspect.yaml  pylintrc  tests.yml  tox.ini
tests/ansible/: ansible.cfg  ca_signing.crt  pki-playbook.yml  requirements.txt
tests/dogtag/: Makefile  PURPOSE  README  beakerjob.dogtag.xml.template  beakerjob.rhcs.x86_64.f19.xml  beakerjob.rhcs.xml.template  make-package.sh  runtest.sh  topologies.sh  update_beaker_job.py
tests/ipa/: Dockerfile
tests/python/: test_authority.py  test_pki.py  test_pki_keyring.py  test_pki_nssdb.py  test_pki_server.py
(+16471 files in other folders)
